# stm32_test_apps

./: .gitignore
bare_metal/: Makefile  README.md  compile_commands.json  linker.ld
bare_metal/src/: main.c  startup.s
bare_metal/src/drivers/: base.h  gpio.h  rcc.h
ds18b20_impl/: .clang-format  .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  ds18b20_impl.ioc
ds18b20_impl/Core/Inc/: main.h  stm32f1xx_hal_conf.h
ds18b20_impl/Core/Lib/sensors/: ds18b20.c  ds18b20.h
ds18b20_impl/Core/Src/: main.c  stm32f1xx_hal_msp.c
ds18b20_impl/Lib/Inc/: ds18b20.h  ow.h  ow_config.h
ds18b20_impl/Lib/Src/: ds18b20.c  ow.c
ds18b20_impl/cmake/stm32cubemx/: CMakeLists.txt  Makefile  cmake_install.cmake
